Corrected some issues according to translation files

--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_de.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_de.properties
@@ -25,3 +25,5 @@ Message.label=Nachricht
 Message.description=[leerer String]
 RecipientID.label=Empf\u00e4nger
 RecipientID.description=[leerer String]
+connection.pageTitle=Enter message and recipient
+connection.pageDescription=Send direct messages
