--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_es.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_es.properties
@@ -25,3 +25,5 @@ Message.label=Mensaje
 Message.description=[cadena vac\u00eda]
 RecipientID.label=beneficiario
 RecipientID.description=[cadena vac\u00eda]
+connection.pageTitle=Enter message and recipient
+connection.pageDescription=Send direct messages
