--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_fr.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_fr.properties
@@ -25,3 +25,5 @@ Message.label=Message
 Message.description=
 RecipientID.label=Destinataire
 RecipientID.description=
+connection.pageTitle=Enter message and recipient
+connection.pageDescription=Send direct messages
