--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_it.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_it.properties
@@ -25,3 +25,5 @@ Message.label=Messaggio
 Message.description=[stringa vuota]
 RecipientID.label=Destinatario
 RecipientID.description=[stringa vuota]
+connection.pageTitle=Enter message and recipient
+connection.pageDescription=Send direct messages
