--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_pt.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_pt.properties
@@ -25,3 +25,5 @@ Message.label=Mensagem
 Message.description=[empty string]
 RecipientID.label=Destinat\u00e1rio
 RecipientID.description=[empty string]
+connection.pageTitle=Enter message and recipient
+connection.pageDescription=Send direct messages
