--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_de.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_de.properties
@@ -23,3 +23,5 @@ AccessTokenSecret.label=Geheimes Zugriffstoken
 AccessTokenSecret.description=[leerer String]
 Status.label=Status
 Status.description=[leerer String]
+connection.pageDescription=Update "What's happening?"
+connection.pageTitle=Twitter - Update Status
