--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_es.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_es.properties
@@ -23,3 +23,5 @@ AccessTokenSecret.label=El acceso secreto al contador
 AccessTokenSecret.description=[cadena vac\u00eda]
 Status.label=estatus
 Status.description=[cadena vac\u00eda]
+connection.pageDescription=Update "What's happening?"
+connection.pageTitle=Twitter - Update Status
