--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_fr.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_fr.properties
@@ -23,3 +23,5 @@ AccessTokenSecret.label=Jeton d'acc\u00e8s secret
 AccessTokenSecret.description=
 Status.label=Statut
 Status.description=
+connection.pageDescription=Update "What's happening?"
+connection.pageTitle=Twitter - Update Status
