--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_it.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_it.properties
@@ -23,3 +23,5 @@ AccessTokenSecret.label=Token di Accesso Segreto
 AccessTokenSecret.description=[stringa vuota]
 Status.label=Stato
 Status.description=[stringa vuota]
+connection.pageDescription=Update "What's happening?"
+connection.pageTitle=Twitter - Update Status
