--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_pt.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_pt.properties
@@ -23,3 +23,5 @@ AccessTokenSecret.label=Token de acesso
 AccessTokenSecret.description=[empty string]
 Status.label=Status
 Status.description=[empty string]
+connection.pageDescription=Update "What's happening?"
+connection.pageTitle=Twitter - Update Status
