--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_fr.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_fr.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Envoi de messages
+connectorDefinitionLabel=Envoyer un Tweet
+connectorDefinitionDescription=Envoi d'un message Twitter
 msg.pageDescription=Envoi de messages
 msg.pageTitle=Veuillez entrer les informations du message
 ProxySettings.label=Param\u00e8tres du proxy
