--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_fr.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_fr.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Mise \u00e0 jour du status
+connectorDefinitionLabel=Mise \u00e0 jour du status
+connectorDefinitionDescription=Mise \u00e0 jour du status d'un compte Twitter
 msg.pageDescription=Mise \u00e0 jour de "Quoi de neuf?"
 msg.pageTitle=Twitter - Mise \u00e0 jour du statut
 ProxySettings.label=Param\u00e8tres du proxy
