--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_de.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_de.properties
@@ -1,29 +1,30 @@
 #X-Generator: crowdin.net
 social.category=Sozial
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Direkte Nachrichten senden
+twitter.category=Twitter
+connectorDefinitionLabel=Tweet senden
+connectorDefinitionDescription=Tweet-Nachricht senden
 msg.pageDescription=Direkte Nachrichten senden
-msg.pageTitle=Parameter und Nachricht eingeben
+msg.pageTitle=Parameter eingeben
+connection.pageTitle=Nachricht und Empf\u00e4nger eingeben
+connection.pageDescription=Direkte Nachrichten senden
 ProxySettings.label=Proxy-Einstellungen
 ProxyHost.label=HTTP-Proxy
-ProxyHost.description=[leerer String]
+ProxyHost.description=
 ProxyPort.label=Proxy-Port
-ProxyPort.description=[leerer String]
+ProxyPort.description=
 ProxyUser.label=Proxy-Benutzername
-ProxyUser.description=[leerer String]
+ProxyUser.description=
 ProxyPass.label=Proxy-Passwort
-ProxyPass.description=[leerer String]
+ProxyPass.description=
 ConsumerKey.label=Verbraucherschl\u00fcssel
-ConsumerKey.description=[leerer String]
+ConsumerKey.description=
 ConsumerSecret.label=Verbrauchergeheimnis
-ConsumerSecret.description=[leerer String]
+ConsumerSecret.description=
 AccessToken.label=Zugriffstoken
-AccessToken.description=[leerer String]
+AccessToken.description=
 AccessTokenSecret.label=Geheimes Zugriffstoken
-AccessTokenSecret.description=[leerer String]
+AccessTokenSecret.description=
 Message.label=Nachricht
-Message.description=[leerer String]
+Message.description=
 RecipientID.label=Empf\u00e4nger
-RecipientID.description=[leerer String]
-connection.pageTitle=Enter message and recipient
-connection.pageDescription=Send direct messages
+RecipientID.description=ID oder Name des Empf\u00e4ngers
