--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_es.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_es.properties
@@ -1,29 +1,30 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Envie mensajes directos
+twitter.category=Twitter
+connectorDefinitionLabel=Enviar un Tweet
+connectorDefinitionDescription=Enviar un tweet
 msg.pageDescription=Envie mensajes directos
-msg.pageTitle=Introduzca los par\u00e1metros y el mensaje
+msg.pageTitle=Introduzca los parametros
+connection.pageTitle=Introduzca el mensaje y el destinatario
+connection.pageDescription=Envie mensajes directos
 ProxySettings.label=configuraci\u00f3n proxy
 ProxyHost.label=Proxy HTTP
-ProxyHost.description=[cadena vac\u00eda]
+ProxyHost.description=
 ProxyPort.label=puerto Proxy 
-ProxyPort.description=[cadena vac\u00eda]
+ProxyPort.description=
 ProxyUser.label=Usuario proxy
-ProxyUser.description=[cadena vac\u00eda]
+ProxyUser.description=
 ProxyPass.label=Contrase\u00f1a  proxy
-ProxyPass.description=[cadena vac\u00eda]
+ProxyPass.description=
 ConsumerKey.label=Clave del Consumidor
-ConsumerKey.description=[cadena vac\u00eda]
+ConsumerKey.description=
 ConsumerSecret.label=Secreto del consumidor
-ConsumerSecret.description=[cadena vac\u00eda]
+ConsumerSecret.description=
 AccessToken.label=token de acceso
-AccessToken.description=[cadena vac\u00eda]
+AccessToken.description=
 AccessTokenSecret.label=El acceso secreto al contador
-AccessTokenSecret.description=[cadena vac\u00eda]
+AccessTokenSecret.description=
 Message.label=Mensaje
-Message.description=[cadena vac\u00eda]
+Message.description=
 RecipientID.label=beneficiario
-RecipientID.description=[cadena vac\u00eda]
-connection.pageTitle=Enter message and recipient
-connection.pageDescription=Send direct messages
+RecipientID.description=ID o nombre del destinatario
