--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_fr.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_fr.properties
@@ -1,9 +1,12 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Envoyer un Tweet
-connectorDefinitionDescription=Envoi d'un message Twitter
+twitter.category=Mise \u00e0 jour du statut
+connectorDefinitionLabel=Poster un tweet
+connectorDefinitionDescription=Poster un tweet
 msg.pageDescription=Envoi de messages
-msg.pageTitle=Veuillez entrer les informations du message
+msg.pageTitle=Renseignez les param\u00e8tres
+connection.pageTitle=Renseignez le message et le destinataire
+connection.pageDescription=Envoi de messages
 ProxySettings.label=Param\u00e8tres du proxy
 ProxyHost.label=Proxy HTTP
 ProxyHost.description=
@@ -24,6 +27,4 @@ AccessTokenSecret.description=
 Message.label=Message
 Message.description=
 RecipientID.label=Destinataire
-RecipientID.description=
-connection.pageTitle=Enter message and recipient
-connection.pageDescription=Send direct messages
+RecipientID.description=Identifiant ou nom du destinataire
