--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_it.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_it.properties
@@ -1,29 +1,30 @@
 #X-Generator: crowdin.net
 social.category=Sociale
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Invia messaggi diretti
+twitter.category=Twitter
+connectorDefinitionLabel=Invia un Tweet
+connectorDefinitionDescription=Invia un messaggio Tweet
 msg.pageDescription=Invia messaggi diretti
-msg.pageTitle=Immetti i parametri e il messaggio
+msg.pageTitle=Immettere i parametri
+connection.pageTitle=Inserisci il messaggio e il destinatario
+connection.pageDescription=Invia messaggi diretti
 ProxySettings.label=Impostazioni proxy
 ProxyHost.label=Proxy HTTP
-ProxyHost.description=[stringa vuota]
+ProxyHost.description=
 ProxyPort.label=Porta proxy
-ProxyPort.description=[stringa vuota]
+ProxyPort.description=
 ProxyUser.label=username proxy
-ProxyUser.description=[stringa vuota]
+ProxyUser.description=
 ProxyPass.label=Password proxy
-ProxyPass.description=[stringa vuota]
+ProxyPass.description=
 ConsumerKey.label=Consumer key
-ConsumerKey.description=[stringa vuota]
+ConsumerKey.description=
 ConsumerSecret.label=Consumer secret
-ConsumerSecret.description=[stringa vuota]
+ConsumerSecret.description=
 AccessToken.label=Token di accesso
-AccessToken.description=[stringa vuota]
+AccessToken.description=
 AccessTokenSecret.label=Token di Accesso Segreto
-AccessTokenSecret.description=[stringa vuota]
+AccessTokenSecret.description=
 Message.label=Messaggio
-Message.description=[stringa vuota]
+Message.description=
 RecipientID.label=Destinatario
-RecipientID.description=[stringa vuota]
-connection.pageTitle=Enter message and recipient
-connection.pageDescription=Send direct messages
+RecipientID.description=ID o nome del destinatario
