--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_pt.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct_pt.properties
@@ -1,29 +1,30 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Enviar mensagens diretas
+twitter.category=Twitter
+connectorDefinitionLabel=Enviar um Tweet
+connectorDefinitionDescription=Enviar uma mensagem de tweet
 msg.pageDescription=Enviar mensagens diretas
-msg.pageTitle=Digite par\u00e2metros e mensagem
+msg.pageTitle=Inserir par\u00e2metros
+connection.pageTitle=Inserir a mensagem e o destinat\u00e1rio
+connection.pageDescription=Enviar mensagens diretas
 ProxySettings.label=Configura\u00e7\u00f5es de proxy
 ProxyHost.label=Proxy HTTP
-ProxyHost.description=[empty string]
+ProxyHost.description=
 ProxyPort.label=Porta proxy
-ProxyPort.description=[empty string]
+ProxyPort.description=
 ProxyUser.label=Nome de usu\u00e1rio  proxy
-ProxyUser.description=[empty string]
+ProxyUser.description=
 ProxyPass.label=Senha do proxy
-ProxyPass.description=[empty string]
+ProxyPass.description=
 ConsumerKey.label=Chave de usu\u00e1rio
-ConsumerKey.description=[empty string]
+ConsumerKey.description=
 ConsumerSecret.label=Consumer secret
-ConsumerSecret.description=[empty string]
+ConsumerSecret.description=
 AccessToken.label=Token de acesso
-AccessToken.description=[empty string]
+AccessToken.description=
 AccessTokenSecret.label=Token de acesso
-AccessTokenSecret.description=[empty string]
+AccessTokenSecret.description=
 Message.label=Mensagem
-Message.description=[empty string]
+Message.description=
 RecipientID.label=Destinat\u00e1rio
-RecipientID.description=[empty string]
-connection.pageTitle=Enter message and recipient
-connection.pageDescription=Send direct messages
+RecipientID.description=ID ou nome do seu destinat\u00e1rio
