--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_de.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_de.properties
@@ -1,27 +1,28 @@
 #X-Generator: crowdin.net
 social.category=Sozial
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Status aktualisieren
+twitter.category=Twitter
+connectorDefinitionLabel=Twitter-Status aktualisieren
+connectorDefinitionDescription=Status des Twitter-Kontos aktualisieren
 msg.pageDescription=Rubrik "Aktuelles" aktualisieren
 msg.pageTitle=Twitter - Status aktualisieren
+connection.pageDescription=Rubrik "Aktuelles" aktualisieren
+connection.pageTitle=Twitter - Status aktualisieren
 ProxySettings.label=Proxy-Einstellungen
 ProxyHost.label=HTTP-Proxy
-ProxyHost.description=[leerer String]
+ProxyHost.description=
 ProxyPort.label=Proxy-Port
-ProxyPort.description=[leerer String]
+ProxyPort.description=
 ProxyUser.label=Proxy-Benutzername
-ProxyUser.description=[leerer String]
+ProxyUser.description=
 ProxyPass.label=Proxy-Passwort
-ProxyPass.description=[leerer String]
+ProxyPass.description=
 ConsumerKey.label=Verbraucherschl\u00fcssel
-ConsumerKey.description=[leerer String]
+ConsumerKey.description=
 ConsumerSecret.label=Verbrauchergeheimnis
-ConsumerSecret.description=[leerer String]
+ConsumerSecret.description=
 AccessToken.label=Zugriffstoken
-AccessToken.description=[leerer String]
+AccessToken.description=
 AccessTokenSecret.label=Geheimes Zugriffstoken
-AccessTokenSecret.description=[leerer String]
+AccessTokenSecret.description=
 Status.label=Status
-Status.description=[leerer String]
-connection.pageDescription=Update "What's happening?"
-connection.pageTitle=Twitter - Update Status
+Status.description=
