--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_it.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_it.properties
@@ -1,27 +1,28 @@
 #X-Generator: crowdin.net
 social.category=Sociale
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Aggiorna stato
+twitter.category=Twitter
+connectorDefinitionLabel=Aggiorna lo status di Twitter
+connectorDefinitionDescription=Aggiorna lo stato dell'account twitter
 msg.pageDescription=Aggiornamento "Che cosa sta succedendo?"
 msg.pageTitle=Twitter - Aggiorna Stato
+connection.pageDescription=Aggiornamento "Che cosa sta succedendo?"
+connection.pageTitle=Twitter - Aggiorna Stato
 ProxySettings.label=Impostazioni proxy
 ProxyHost.label=Proxy HTTP
-ProxyHost.description=[stringa vuota]
+ProxyHost.description=
 ProxyPort.label=Porta proxy
-ProxyPort.description=[stringa vuota]
+ProxyPort.description=
 ProxyUser.label=username proxy
-ProxyUser.description=[stringa vuota]
+ProxyUser.description=
 ProxyPass.label=Password proxy
-ProxyPass.description=[stringa vuota]
+ProxyPass.description=
 ConsumerKey.label=Consumer key
-ConsumerKey.description=[stringa vuota]
+ConsumerKey.description=
 ConsumerSecret.label=Consumer secret
-ConsumerSecret.description=[stringa vuota]
+ConsumerSecret.description=
 AccessToken.label=Token di accesso
-AccessToken.description=[stringa vuota]
+AccessToken.description=
 AccessTokenSecret.label=Token di Accesso Segreto
-AccessTokenSecret.description=[stringa vuota]
+AccessTokenSecret.description=
 Status.label=Stato
-Status.description=[stringa vuota]
-connection.pageDescription=Update "What's happening?"
-connection.pageTitle=Twitter - Update Status
+Status.description=
