--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_pt.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_pt.properties
@@ -1,27 +1,28 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Atualizar status
+twitter.category=Twitter
+connectorDefinitionLabel=Atualizar o status do Twitter
+connectorDefinitionDescription=Atualizar o status da conta do twitter
 msg.pageDescription=Atualizar "O que est\u00e1 acontecendo?"
 msg.pageTitle=Twitter - Update Status
+connection.pageDescription=Atualizar "O que est\u00e1 acontecendo?"
+connection.pageTitle=Twitter - Update Status
 ProxySettings.label=Configura\u00e7\u00f5es de proxy
 ProxyHost.label=Proxy HTTP
-ProxyHost.description=[empty string]
+ProxyHost.description=
 ProxyPort.label=Porta proxy
-ProxyPort.description=[empty string]
+ProxyPort.description=
 ProxyUser.label=Nome de usu\u00e1rio  proxy
-ProxyUser.description=[empty string]
+ProxyUser.description=
 ProxyPass.label=Senha do proxy
-ProxyPass.description=[empty string]
+ProxyPass.description=
 ConsumerKey.label=Chave de usu\u00e1rio
-ConsumerKey.description=[empty string]
+ConsumerKey.description=
 ConsumerSecret.label=Consumer secret
-ConsumerSecret.description=[empty string]
+ConsumerSecret.description=
 AccessToken.label=Token de acesso
-AccessToken.description=[empty string]
+AccessToken.description=
 AccessTokenSecret.label=Token de acesso
-AccessTokenSecret.description=[empty string]
+AccessTokenSecret.description=
 Status.label=Status
-Status.description=[empty string]
-connection.pageDescription=Update "What's happening?"
-connection.pageTitle=Twitter - Update Status
+Status.description=
