--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_es.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status_es.properties
@@ -1,27 +1,28 @@
 #X-Generator: crowdin.net
 social.category=Social
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Actualice el estatus
+twitter.category=Twitter
+connectorDefinitionLabel=Modificar el estado de Twitter
+connectorDefinitionDescription=Modificar el estado de tu cuenta de twitter
 msg.pageDescription=Actualice "What's happening?"
-msg.pageTitle=Actualice el  estatus - Twitter 
+msg.pageTitle=Actualice el estado - Twitter 
+connection.pageDescription=Actualice "What's happening?"
+connection.pageTitle=Actualice el estado - Twitter 
 ProxySettings.label=configuraci\u00f3n proxy
 ProxyHost.label=Proxy HTTP
-ProxyHost.description=[cadena vac\u00eda]
+ProxyHost.description=
 ProxyPort.label=puerto Proxy 
-ProxyPort.description=[cadena vac\u00eda]
+ProxyPort.description=
 ProxyUser.label=Usuario proxy
-ProxyUser.description=[cadena vac\u00eda]
+ProxyUser.description=
 ProxyPass.label=Contrase\u00f1a  proxy
-ProxyPass.description=[cadena vac\u00eda]
+ProxyPass.description=
 ConsumerKey.label=Clave del Consumidor
-ConsumerKey.description=[cadena vac\u00eda]
+ConsumerKey.description=
 ConsumerSecret.label=Secreto del consumidor
-ConsumerSecret.description=[cadena vac\u00eda]
+ConsumerSecret.description=
 AccessToken.label=token de acceso
-AccessToken.description=[cadena vac\u00eda]
+AccessToken.description=
 AccessTokenSecret.label=El acceso secreto al contador
-AccessTokenSecret.description=[cadena vac\u00eda]
-Status.label=estatus
-Status.description=[cadena vac\u00eda]
-connection.pageDescription=Update "What's happening?"
-connection.pageTitle=Twitter - Update Status
+AccessTokenSecret.description=
+Status.label=Estado del repositorio
+Status.description=
